<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" 
    android:background="#ffffff">

    <LinearLayout
        android:id="@+id/main_login_layout"
        android:layout_width="fill_parent"
        android:layout_height="674dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/login_layout_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="17dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <TextView
                android:id="@+id/login_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/login_button_txt"
                android:textColor="#663399"
                android:textSize="35dp" />

            <TextView
                android:id="@+id/login_detail_text_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/login_detail_view_txt"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/logout_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40sp"
                android:layout_marginRight="40sp"
                android:layout_marginTop="20sp"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:text="@string/logout_button_txt"
                android:textColor="#ffffff"
                android:textSize="35sp"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_layout_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="17dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <TextView
                android:id="@+id/username_txt_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/username_txt"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/username_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_txt_userid"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textSize="15sp" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/password_txt_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/password_txt"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/pass_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_txt_password"
                android:inputType="textPassword"
                android:textColor="#000000"
                android:textSize="15sp" >
            </EditText>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="left"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="3dp"
                    android:paddingTop="5dp"
                    android:singleLine="false"
                    android:text="@string/remember_my_login_txt"
                    android:textColor="#000000" />

                <CheckBox
                    android:id="@+id/remember_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:text="" />
            </LinearLayout>

            <TextView
                android:id="@+id/make_sure_privacy_policy_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:paddingLeft="3dp"
                android:text="@string/make_sure_privacy_policy_read_txt"
                android:textColor="#000000" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="left"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="3dp"
                    android:paddingTop="5dp"
                    android:singleLine="false"
                    android:text="@string/agree_term_condition_txt"
                    android:textColor="#000000" />

                <CheckBox
                    android:id="@+id/agree_terms_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:text="" />
            </LinearLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="fill_parent"
                android:layout_height="94dp"
                android:layout_marginLeft="40sp"
                android:layout_marginRight="40sp"
                android:layout_marginTop="20sp"
                android:background="@drawable/button_selector"
                android:text="@string/login_button_txt"
                android:textColor="#ffffff"
                android:textSize="35sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
        </LinearLayout>
    </LinearLayout>

</LinearLayout>