<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#808080" >

    <TextView
        android:id="@+id/feedback_title_txt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/image"
        android:gravity="left"
        android:paddingLeft="10sp"
        android:paddingTop="25sp"
        android:text="@string/feedback_title_txt"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/server_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dip"
        android:gravity="right"
        android:textAlignment="gravity"
        android:textColor="#ffffff"
        android:text="@string/current_com_status_1"
        android:paddingTop="25sp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Rightend Arrow -->

    <TextView
        android:id="@+id/feedback_txt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_marginLeft="10sp" />

    <Button
        android:id="@+id/resolve_conflict_auto_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/feedback_txt"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/resolve_auto_btn_txt"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resolve_conflict_auto_btn"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/details_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/details_btn_txt"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/cancel_btn_txt"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/image"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="10sp"
        android:background="#ffffff"
        android:src="@drawable/muses_logo" />


</RelativeLayout>