<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:baselineAligned="false"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/main_menu_buttons_layout"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="visible" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/login_list_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button"
                android:gravity="center_vertical"
                android:paddingEnd="7dp"
                android:paddingLeft="14dp"
                android:paddingRight="7dp"
                android:paddingStart="14dp"
                android:text="@string/login_list_button_txt"
                android:textColor="#ffffff"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="15sp" />
            <Button
                android:id="@+id/security_quiz_list_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button"
                android:gravity="center_vertical"
                android:paddingEnd="7dp"
                android:paddingLeft="14dp"
                android:paddingRight="7dp"
                android:paddingStart="14dp"
                android:text="@string/security_points_button_txt"
                android:textColor="#ffffff"
                android:textSize="14sp"
                android:layout_weight="1"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/statistics_list_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button"
                android:gravity="center_vertical"
                android:paddingEnd="7dp"
                android:paddingLeft="14dp"
                android:paddingRight="7dp"
                android:paddingStart="14dp"
                android:text="@string/statistics_info_button_txt"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:layout_weight="1"
                android:textStyle="bold"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.5"
        android:orientation="vertical" >

        <ScrollView
            android:id="@+id/login_scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp" >

            <LinearLayout
                android:id="@+id/top_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </LinearLayout>
        </ScrollView>
	</LinearLayout>
	
    
    
</LinearLayout>